name:                sandbox
version:             0.1.0.0
synopsis:            sandbox
-- description:
-- license:
license-file:        LICENSE
author:              Christopher Mazey
maintainer:          cjmazey@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18
data-dir:            data
data-files:          data.txt

library
  exposed-modules:     Sandbox
  -- other-modules:
  -- other-extensions:
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010

executable sandbox
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       sandbox
                     , base
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  main-is:             Test.hs
  type:                exitcode-stdio-1.0
  build-depends:       sandbox
                     , base
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  hs-source-dirs:      test
  default-language:    Haskell2010
